# generate_fake_membership_list

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  fake-members.csv-20231212  fake_membership_list_20231030.csv  fake_membership_list_20231227.csv  fake_membership_list_20231229.csv  generate_fake_list.py  pyproject.toml  requirements.txt  test_membership_list.csv  test_membership_list.py
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  lint-python.yml  pylint.yml  python.yml  ruff.yml
src/: generate_fake_list.py
src/utils/: fake_addresses.py  fake_members.py
utils/: fake_addresses.py  fake_members.py
