[project]
name = "fake_membership_list"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Ramona T", "email" = "ramona.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/fake_membership_list" }
dependencies = [
    "attrs==25.4.0",
    "faker_education==1.2.1",
    "Faker==38.2.0",
    "mapbox==0.18.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "ratelimit==2.2.1",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml,sarif]==1.8.3",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "pre-commit==4.3.0",
    "ruff==0.11.12",
    "types-python-dateutil==2.9.0.20251008",
    "types-tqdm==4.67.0.20250809",
]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
    "ANN001",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "mapbox",
    "ratelimit",
    "faker_education"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]
