[project]
name = "fake_membership_list"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Ramona T", "email" = "ramona.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/fake_membership_list" }
dependencies = [
    "attrs==25.4.0",
    "faker_education==1.2.1",
    "Faker==40.4.0",
    "mapbox==0.18.1",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "ratelimit==2.2.1",
    "tqdm==4.67.3",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "pre-commit"},
    {include-group = "security"},
    {include-group = "types"},
]
lint = [
    "ruff==0.15.1",
    "ssort==0.16.0",
]
pre-commit = [
    "pre-commit==4.5.1",
]
security = [
    "bandit[sarif]==1.9.3",
]
types = [
    "mypy==1.19.1",
    "pandas-stubs==2.3.3.260113",
    "types-python-dateutil==2.9.0.20260124",
    "types-tqdm==4.67.3.20260205",
]

[tool]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins (A)
    "ANN",  # flake8-annotations (ANN)
    "ARG",  # flake8-unused-arguments (ARG)
    "B",  # flake8-bugbear (B)
    "BLE",  # flake8-blind-except (BLE)
    "C4",  # flake8-comprehensions (C4)
    "C90",  # mccabe (C90)
    "D",  # pydocstyle (D)
    "DTZ",  # flake8-datetimez (DTZ)
    "E",  # pycodestyle-error (E)
    "EM",  # flake8-errmsg (EM)
    "EXE",  # flake8-executable (EXE)
    "F",  # Pyflakes (F)
    "FA",  # flake8-future-annotations (FA)
    "FBT",  # flake8-boolean-trap (FBT)
    "FIX",  # flake8-fixme (FIX)
    "G",  # flake8-logging-format (G)
    "I",  # isort (I)
    "ICN",  # flake8-import-conventions (ICN)
    "INP",  # flake8-no-pep420 (INP)
    "INT",  # flake8-gettext (INT)
    "ISC",  # flake8-implicit-str-concat (ISC)
    "LOG",  # flake8-logging (LOG)
    "N",  # pep8-naming (N)
    "PIE",  # flake8-pie (PIE)
    "PL",  # Pylint (PL)
    "PT",  # flake8-pytest-style (PT)
    "PTH",  # flake8-use-pathlib (PTH)
    "Q",  # flake8-quotes (Q)
    "RET",  # flake8-return (RET)
    "RSE",  # flake8-raise (RSE)
    "RUF",  # Ruff-specific rules (RUF)
    "SIM",  # flake8-simplify (SIM)
    "SLF",  # flake8-self (SLF)
    "T10",  # flake8-debugger (T10)
    "T20",  # flake8-print (T20)
    "TC",  # flake8-type-checking (TC)
    "TD",  # flake8-todos (TD)
    "TID",  # flake8-tidy-imports (TID)
    "UP",  # pyupgrade (UP)
    "W",  # pycodestyle-warning (W)
    "YTT",  # flake8-2020 (YTT)
]
ignore = [
    "ANN002",  # missing-type-args (ANN002)
    "ANN003",  # missing-type-kwargs (ANN003)
    "D100",  # undocumented-public-module (D100)
    "D102",  # undocumented-public-method (D102)
    "D103",  # undocumented-public-function (D103)
    "D104",  # undocumented-public-package (D104)
    "D107",  # undocumented-public-init (D107)
    "D203",  # incorrect-blank-line-before-class (D203)
    "D212",  # multi-line-summary-first-line (D212)
    "FIX002",  # line-contains-todo (FIX002)
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "mapbox",
    "ratelimit",
    "faker_education"
]
ignore_missing_imports = true
